--- a/app/_static/markdown.css
+++ b/app/_static/markdown.css
@@ -167,6 +167,18 @@
 .markdown-body ol {
   list-style-type: decimal;
 }
+.markdown-body ol[type="a" s] {
+  list-style-type: lower-alpha;
+}
+.markdown-body ol[type="A" s] {
+  list-style-type: upper-alpha;
+}
+.markdown-body ol[type='i' s] {
+  list-style-type: lower-roman;
+}
+.markdown-body ol[type='I' s] {
+  list-style-type: upper-roman;
+}
 .markdown-body ul {
   list-style-type: disc;
 }
